Fixed Gradle sync problems, Added activities

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,10 @@
             android:name=".GameActivity"
             android:label="GameActivity" >
         </activity>
+        <activity
+            android:name=".FindPlayersActivity"
+            android:label="FindPlayersActivity">
+        </activity>
     </application>
 
 </manifest>
