--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
             android:label="OptionsActivity" >
         </activity>
         <activity
+            android:screenOrientation="portrait"
             android:name=".GameActivity"
             android:label="GameActivity" >
         </activity>
